--- a/Seance06/sudoku.ipynb
+++ b/Seance06/sudoku.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "headed-rally",
+   "id": "meaning-writing",
    "metadata": {},
    "source": [
     "# Objectif\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "numerical-fabric",
+   "id": "naughty-title",
    "metadata": {},
    "source": [
     "Exemple d'une grille complète:\n",
@@ -28,12 +28,12 @@
     "| 2 | 1 | 4 | 3 |\n",
     "| 4 | 3 | 2 | 1 |\n",
     "\n",
-    "On a exactement une fois chaque nombre sur chaque ligne, chaque colonne et chaque carré."
+    "**Règle** on doit avoir exactement une fois chaque valeur sur chaque ligne, chaque colonne et chaque carré."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "norman-quick",
+   "id": "driven-possession",
    "metadata": {},
    "source": [
     "## Sommets\n",
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "medium-track",
+   "id": "organic-therapy",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collectible-threshold",
+   "id": "piano-lambda",
    "metadata": {},
    "source": [
     "Il y a clairement trops de sommets pour expérer construire le graphe entier en mémoire."
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liable-scoop",
+   "id": "further-thompson",
    "metadata": {},
    "source": [
     "## Arretes\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "black-incentive",
+   "id": "embedded-actor",
    "metadata": {},
    "source": [
     "Le graphe qui nous intéresse part donc d'une grille incomplète et contient tous les sommets reliés à cette grille par un chemin.\n",
@@ -99,9 +99,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "endless-ethnic",
+   "id": "great-positive",
    "metadata": {},
    "source": [
+    "**Dénombrement**\n",
+    "\n",
     "Si on part d'une grille avec $n$ cases vides on a alors\n",
     "$$4^0 + 4^1 + 4^2 + \\dots + 4^n = \\frac{4^{n+1} - 1}{3}$$\n",
     "grilles incomplètes dans le graphe."
@@ -109,17 +111,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "southeast-september",
+   "id": "naval-intermediate",
    "metadata": {},
    "source": [
+    "**Définition**\n",
+    "\n",
     "De plus on observe que le graphe est sans boucle (visuellement on voit qu'on ne peut que descendre dans le graphe) on dit qu'il s'agit d'un arbre."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "mediterranean-adrian",
+   "id": "straight-eight",
    "metadata": {},
    "source": [
+    "**Méthode de résolution**\n",
+    "\n",
     "Les grilles complètes correspondant au remplissage de l'arbre corrspondent aux sommets qui sont dans la couche la plus basse de l'arbre.\n",
     "\n",
     "Parmi celles-ci on cherche celles qui satisfont les règles chaque valeur apparaît au plus une fois sur chaque:\n",
@@ -130,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dying-equivalent",
+   "id": "freelance-medium",
    "metadata": {},
    "source": [
     "**REMARQUE** les solutions correspondant à une grille incomplète sont la réunion des solutions correspondant à ses voisins."
@@ -138,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "every-stylus",
+   "id": "exposed-essay",
    "metadata": {},
    "source": [
     "**REMARQUE** dés qu'une grille incomplète enfreint la règle on est sûr que toutes les grilles qui lui sont connectés vont l'enfreindre aussi! On peut donc arrêter le parcours pour cette partie du graphe."
@@ -146,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "exempt-cinema",
+   "id": "sophisticated-field",
    "metadata": {},
    "source": [
     "## Vérification des règles"
@@ -154,10 +160,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "passing-tracker",
+   "id": "chronic-sugar",
    "metadata": {},
    "source": [
-    "Indice pour chaque dans la liste\n",
+    "Indice pour chaque case dans la liste\n",
     "\n",
     "| 0 | 1 | 2 | 3 |\n",
     "|---|---|---|---|\n",
@@ -167,9 +173,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "voluntary-doctrine",
+   "metadata": {},
+   "source": [
+    "Indices des cases en binaire\n",
+    "\n",
+    "<img src=\"./indices_binaires.svg\"/>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "northern-underwear",
+   "execution_count": 2,
+   "id": "personalized-white",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,27 +194,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "basic-resistance",
+   "execution_count": 3,
+   "id": "complete-scientist",
    "metadata": {},
    "outputs": [],
    "source": [
     "def verifie_lignes(grille: Grille) -> bool:\n",
     "    \"\"\"Chaque valeur doit être au plus présente une fois par ligne\"\"\"\n",
     "    for valeur in (1, 2, 3, 4):\n",
-    "        for num_ligne in range(4):\n",
-    "            if sum(\n",
-    "                1 \n",
-    "                for indice in range(num_ligne * 4, (num_ligne+1)*4) \n",
-    "                if grille[indice] == valeur\n",
-    "            ) >= 2:\n",
-    "                return False\n",
-    "    return True"
+    "        for i3 in (0, 1):\n",
+    "            for i2 in (0, 1):\n",
+    "                if sum(\n",
+    "                    1 \n",
+    "                    for i1 in (0, 1)\n",
+    "                    for i0 in (0, 1)\n",
+    "                    if grille[i3 * 2**3 + i2 * 2 ** 2 + i1 * 2**1 + i0 * 2 ** 0] == valeur\n",
+    "                ) >= 2:\n",
+    "                    return False\n",
+    "        return True"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "according-cause",
+   "id": "destroyed-raising",
    "metadata": {},
    "source": [
     "### Exercice\n",
@@ -208,27 +226,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "distributed-chapel",
+   "execution_count": 4,
+   "id": "occupied-liberal",
    "metadata": {},
    "outputs": [],
    "source": [
     "def verifie_colonnes(grille: Grille) -> bool:\n",
     "    \"\"\"Chaque valeur doit être au plus présente une fois par colonne.\"\"\"\n",
     "    for valeur in (1, 2, 3, 4):\n",
-    "        for num_colonne in range(4):\n",
-    "            if sum(\n",
-    "                1 \n",
-    "                for multiple in range(4) \n",
-    "                if grille[num_colonne + 4 * multiple] == valeur\n",
-    "            ) >= 2:\n",
-    "                return False\n",
-    "    return True"
+    "        for i1 in (0, 1):\n",
+    "            for i0 in (0, 1):\n",
+    "                if sum(\n",
+    "                    1 \n",
+    "                    for i3 in (0, 1)\n",
+    "                    for i2 in (0, 1)\n",
+    "                    if grille[i3 * 2**3 + i2 * 2 ** 2 + i1 * 2**1 + i0 * 2 ** 0] == valeur\n",
+    "                ) >= 2:\n",
+    "                    return False\n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "mediterranean-miami",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def verifie_carres(grille: Grille) -> bool:\n",
+    "    \"\"\"Chaque valeur doit être au plus présente une fois par carre.\"\"\"\n",
+    "    for valeur in (1, 2, 3, 4):\n",
+    "        for i3 in (0, 1):\n",
+    "            for i1 in (0, 1):\n",
+    "                if sum(\n",
+    "                    1 \n",
+    "                    for i2 in (0, 1)\n",
+    "                    for i0 in (0, 1)\n",
+    "                    if grille[i3 * 2**3 + i2 * 2 ** 2 + i1 * 2**1 + i0 * 2 ** 0] == valeur\n",
+    "                ) >= 2:\n",
+    "                    return False\n",
+    "        return True"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "minute-afternoon",
+   "id": "associate-information",
    "metadata": {},
    "source": [
     "### Exercice\n",
@@ -240,8 +282,170 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "exotic-sleeping",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "-----------------\n",
+      "| 1 | 2 | 3 | 4 |\n",
+      "-----------------\n",
+      "| 1 | 2 | 3 | 4 |\n",
+      "-----------------\n",
+      "| 1 | 2 | 3 | 4 |\n",
+      "-----------------\n",
+      "| 1 | 2 | 3 | 4 |\n",
+      "-----------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "gr = Grille([1, 2, 3, 4, 1, 2, 3, 4, 1, 2, 3, 4, 1, 2, 3, 4])\n",
+    "print(gr)\n",
+    "assert verifie_lignes(gr)\n",
+    "assert not verifie_colonnes(gr)\n",
+    "assert not verifie_carres(gr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "planned-muscle",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "-----------------\n",
+      "| 1 | 1 | 1 | 1 |\n",
+      "-----------------\n",
+      "| 2 | 2 | 2 | 2 |\n",
+      "-----------------\n",
+      "| 3 | 3 | 3 | 3 |\n",
+      "-----------------\n",
+      "| 4 | 4 | 4 | 4 |\n",
+      "-----------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "gr = Grille([1, 1, 1, 1, 2, 2, 2, 2, 3, 3, 3, 3, 4, 4, 4, 4])\n",
+    "print(gr)\n",
+    "assert not verifie_lignes(gr)\n",
+    "assert verifie_colonnes(gr)\n",
+    "assert not verifie_carres(gr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "opening-bahamas",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "-----------------\n",
+      "| 1 | 2 | 3 | 4 |\n",
+      "-----------------\n",
+      "| 2 | 1 | 4 | 3 |\n",
+      "-----------------\n",
+      "| 3 | 4 | 1 | 2 |\n",
+      "-----------------\n",
+      "| 4 | 3 | 2 | 1 |\n",
+      "-----------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "gr = Grille.par_lignes(\n",
+    "    [\n",
+    "        [1, 2, 3, 4],\n",
+    "        [2, 1, 4, 3],\n",
+    "        [3, 4, 1, 2],\n",
+    "        [4, 3, 2, 1],\n",
+    "    ]\n",
+    ")\n",
+    "print(gr)\n",
+    "assert verifie_colonnes(gr)\n",
+    "assert verifie_lignes(gr)\n",
+    "assert not verifie_carres(gr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "interesting-pulse",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "-----------------\n",
+      "| 1 | 2 | 1 | 2 |\n",
+      "-----------------\n",
+      "| 3 | 4 | 3 | 4 |\n",
+      "-----------------\n",
+      "| 1 | 2 | 3 | 4 |\n",
+      "-----------------\n",
+      "| 3 | 4 | 1 | 2 |\n",
+      "-----------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "gr = Grille.par_lignes(\n",
+    "    [\n",
+    "        [1, 2, 1, 2],\n",
+    "        [3, 4, 3, 4],\n",
+    "        [1, 2, 3, 4],\n",
+    "        [3, 4, 1, 2],\n",
+    "    ]\n",
+    ")\n",
+    "print(gr)\n",
+    "assert not verifie_colonnes(gr)\n",
+    "assert not verifie_lignes(gr)\n",
+    "assert verifie_carres(gr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "removable-cornell",
+   "metadata": {},
+   "source": [
+    "### Exercice\n",
+    "\n",
+    "Codez un constructeur alternatif `par_str` permettant\n",
+    "```python\n",
+    "gr = Grille.par_str(\"\"\"\n",
+    "1234\n",
+    "2134\n",
+    "3412\n",
+    "4321\n",
+    "\"\"\")\n",
+    "```\n",
+    "\n",
+    "10 min -> 12h"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "dedicated-croatia",
+   "id": "exposed-drilling",
    "metadata": {},
    "outputs": [],
    "source": []
