--- a/Seance06/sudoku.ipynb
+++ b/Seance06/sudoku.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "meaning-writing",
+   "id": "express-energy",
    "metadata": {},
    "source": [
     "# Objectif\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "naughty-title",
+   "id": "damaged-description",
    "metadata": {},
    "source": [
     "Exemple d'une grille complète:\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "driven-possession",
+   "id": "conceptual-combine",
    "metadata": {},
    "source": [
     "## Sommets\n",
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "organic-therapy",
+   "id": "freelance-centre",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "piano-lambda",
+   "id": "settled-clinic",
    "metadata": {},
    "source": [
     "Il y a clairement trops de sommets pour expérer construire le graphe entier en mémoire."
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "further-thompson",
+   "id": "radio-enlargement",
    "metadata": {},
    "source": [
     "## Arretes\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "embedded-actor",
+   "id": "black-ceramic",
    "metadata": {},
    "source": [
     "Le graphe qui nous intéresse part donc d'une grille incomplète et contient tous les sommets reliés à cette grille par un chemin.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "great-positive",
+   "id": "encouraging-parks",
    "metadata": {},
    "source": [
     "**Dénombrement**\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "naval-intermediate",
+   "id": "treated-principal",
    "metadata": {},
    "source": [
     "**Définition**\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "straight-eight",
+   "id": "nonprofit-stake",
    "metadata": {},
    "source": [
     "**Méthode de résolution**\n",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "freelance-medium",
+   "id": "unnecessary-theta",
    "metadata": {},
    "source": [
     "**REMARQUE** les solutions correspondant à une grille incomplète sont la réunion des solutions correspondant à ses voisins."
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "exposed-essay",
+   "id": "textile-saturday",
    "metadata": {},
    "source": [
     "**REMARQUE** dés qu'une grille incomplète enfreint la règle on est sûr que toutes les grilles qui lui sont connectés vont l'enfreindre aussi! On peut donc arrêter le parcours pour cette partie du graphe."
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sophisticated-field",
+   "id": "looking-communication",
    "metadata": {},
    "source": [
     "## Vérification des règles"
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chronic-sugar",
+   "id": "emerging-campaign",
    "metadata": {},
    "source": [
     "Indice pour chaque case dans la liste\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "voluntary-doctrine",
+   "id": "electric-bristol",
    "metadata": {},
    "source": [
     "Indices des cases en binaire\n",
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "personalized-white",
+   "id": "covered-diameter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "complete-scientist",
+   "id": "failing-retreat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "destroyed-raising",
+   "id": "indirect-invitation",
    "metadata": {},
    "source": [
     "### Exercice\n",
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "occupied-liberal",
+   "id": "center-ozone",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "mediterranean-miami",
+   "id": "brazilian-friendly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "associate-information",
+   "id": "noted-silicon",
    "metadata": {},
    "source": [
     "### Exercice\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "exotic-sleeping",
+   "id": "economic-palestinian",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "planned-muscle",
+   "id": "specialized-border",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "opening-bahamas",
+   "id": "limited-overhead",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "interesting-pulse",
+   "id": "statutory-murray",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "removable-cornell",
+   "id": "commercial-command",
    "metadata": {},
    "source": [
     "### Exercice\n",
@@ -444,11 +444,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "exposed-drilling",
+   "execution_count": 10,
+   "id": "graphic-printer",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "-----------------\n",
+      "| 1 | 2 | 3 | 4 |\n",
+      "-----------------\n",
+      "| 2 | 1 | 3 | 4 |\n",
+      "-----------------\n",
+      "| 3 | 4 | 1 | 2 |\n",
+      "-----------------\n",
+      "| 4 | 3 | 2 | 1 |\n",
+      "-----------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "gr = Grille.par_str(\"\"\"\n",
+    "1234\n",
+    "2134\n",
+    "3412\n",
+    "4321\n",
+    "\"\"\")\n",
+    "print(gr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "biological-kidney",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "-----------------\n",
+      "| 1 | 2 | x | 4 |\n",
+      "-----------------\n",
+      "| 2 | 1 | 3 | 4 |\n",
+      "-----------------\n",
+      "| 3 | 4 | 1 | 2 |\n",
+      "-----------------\n",
+      "| 4 | 3 | 2 | 1 |\n",
+      "-----------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "gr = Grille.par_str(\"\"\"\n",
+    "12x4\n",
+    "2134\n",
+    "3412\n",
+    "4321\n",
+    "\"\"\")\n",
+    "print(gr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "healthy-clearing",
+   "metadata": {},
+   "source": [
+    "### Exercice\n",
+    "\n",
+    "Adapter le code pour les sudokus de type 3."
+   ]
   }
  ],
  "metadata": {
