--- a/Seance07/seance.ipynb
+++ b/Seance07/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "wrong-mother",
+   "id": "surgical-democracy",
    "metadata": {},
    "source": [
     "# Retour sur les graphes et les parcours"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "greenhouse-river",
+   "id": "adaptive-midnight",
    "metadata": {},
    "source": [
     "**REMARQUE** on a vu qu'on n'est pas obligé d'avoir le graphe entier en mémoire pour travailler dessus!"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "australian-strike",
+   "id": "local-playlist",
    "metadata": {},
    "source": [
     "<img src=\"./graphe_non_oriente.svg\"/>"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ethical-growing",
+   "id": "hourly-rogers",
    "metadata": {},
    "source": [
     "## Exercice\n",
@@ -35,9 +35,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "adult-proceeding",
+   "metadata": {},
+   "source": [
+    "**REMARQUE** on constate que la seul fonctionnalité d'un graphe qu'on utilise pour `dfs` et `bfs` est la possibilité d'itérer sur les voisins d'un sommet."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "transparent-algebra",
+   "metadata": {},
+   "source": [
+    "**REMARQUE** on a en fait trois façons d'implémenter un graphe\n",
+    "- liste de sommets et liste d'arrêtes\n",
+    "- dictionnaire de voisinage\n",
+    "- représentation matricielle"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "conservative-shell",
+   "id": "floating-surveillance",
    "metadata": {},
    "outputs": [],
    "source": []
