--- a/Seance07/seance.ipynb
+++ b/Seance07/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "comparable-hungarian",
+   "id": "republican-scene",
    "metadata": {},
    "source": [
     "# Retour sur les graphes et les parcours"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incorporate-yield",
+   "id": "buried-huntington",
    "metadata": {},
    "source": [
     "**REMARQUE** on a vu qu'on n'est pas obligé d'avoir le graphe entier en mémoire pour travailler dessus!"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "subjective-vault",
+   "id": "ecological-lingerie",
    "metadata": {},
    "source": [
     "<img src=\"./graphe_non_oriente.svg\"/>"
@@ -26,18 +26,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wireless-defensive",
+   "id": "qualified-interim",
    "metadata": {},
    "source": [
     "## Exercice\n",
     "\n",
     "1. Implémenter les algorithmes *dfs* (Depth First Search) et *bfs* (Breadth First Search) pour parcourir les graphes partant du sommet *1* (une fonction `bfs` une fonction `dfs`) 10min -> 10h50\n",
-    "2. Implémenter `Graphe_v1` et `Graphe_v2` et tester sur le graphe ci-dessus le tout. 10min -> 11h15"
+    "2. Implémenter `Graphe_v1` et `Graphe_v2` et tester sur le graphe ci-dessus le tout. 10min -> 11h15\n",
+    "3. Implémenter `Graphe_v3` et tester le résultat. 10min -> 11h50"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "wrapped-obligation",
+   "id": "global-trial",
    "metadata": {},
    "source": [
     "**REMARQUE** on constate que la seul fonctionnalité d'un graphe qu'on utilise pour `dfs` et `bfs` est la possibilité d'itérer sur les voisins d'un sommet."
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "grave-bunch",
+   "id": "acoustic-modem",
    "metadata": {},
    "source": [
     "**REMARQUE** on a en fait trois façons d'implémenter un graphe\n",
@@ -71,8 +72,19 @@
     "```\n",
     "- représentation matricielle\n",
     "\n",
+    "On numérote les sommets du graphe de $1$ à $n$ on représente alors le graphe comme une matrice $A\\in \\mathcal{M}_n(\\mathbb{R})$ avec\n",
+    "$$A_{i,j}=\n",
+    "\\begin{cases}\n",
+    "1 & \\text{si } (i,j) \\text{ est une arrete}\\\\\n",
+    "0 & \\text{sinon}\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "On dit que $A$ est la matrice d'adjacence.\n",
     "\n",
-    "\\begin{array)\n",
+    "**REMARQUE** un graphe est non ordonné si et seulement si sa matrice d'adjacence est symétrique. En fait de nombreuses propriétés du graphe on des équivalents algébriques.\n",
+    "\n",
+    "\n",
+    "\\begin{pmatrix}\n",
     " 0 & 1 & 0 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
     " 1 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 \\\\\n",
     " 0 & 0 & 0 & 1 & 0 & 0 & 0 & 1 & 0 & 0 & 0 \\\\\n",
@@ -84,14 +96,14 @@
     " 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 0 & 1 & 0 \\\\\n",
     " 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & 1 \\\\\n",
     " 0 & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 & 1 & 0\n",
-    "\\end{array}\n",
+    "\\end{pmatrix}\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "grave-kennedy",
+   "id": "homeless-apparel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fuzzy-metabolism",
+   "id": "olympic-donor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "quick-street",
+   "id": "informative-phenomenon",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "destroyed-latin",
+   "id": "blond-wrestling",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "binding-rhythm",
+   "id": "criminal-meditation",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ideal-naples",
+   "id": "wanted-front",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "attractive-islam",
+   "id": "sublime-transparency",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "rubber-citizenship",
+   "id": "vocal-shareware",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "earned-museum",
+   "id": "modular-wisconsin",
    "metadata": {},
    "outputs": [
     {
@@ -296,14 +308,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "constitutional-vinyl",
+   "id": "ruled-japan",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fixed-airplane",
+   "id": "billion-market",
    "metadata": {},
    "source": [
     "**REMARQUE** le parcours par `dfs` produit les sommets par ordre de distance au sommet de départ.\n",
@@ -314,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "demographic-python",
+   "id": "legislative-briefs",
    "metadata": {},
    "outputs": [],
    "source": []
