--- a/Seance07/seance.ipynb
+++ b/Seance07/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "republican-scene",
+   "id": "white-laser",
    "metadata": {},
    "source": [
     "# Retour sur les graphes et les parcours"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "buried-huntington",
+   "id": "improving-carter",
    "metadata": {},
    "source": [
     "**REMARQUE** on a vu qu'on n'est pas obligé d'avoir le graphe entier en mémoire pour travailler dessus!"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecological-lingerie",
+   "id": "incident-hampshire",
    "metadata": {},
    "source": [
     "<img src=\"./graphe_non_oriente.svg\"/>"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "qualified-interim",
+   "id": "suspended-stability",
    "metadata": {},
    "source": [
     "## Exercice\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "global-trial",
+   "id": "gentle-mobile",
    "metadata": {},
    "source": [
     "**REMARQUE** on constate que la seul fonctionnalité d'un graphe qu'on utilise pour `dfs` et `bfs` est la possibilité d'itérer sur les voisins d'un sommet."
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acoustic-modem",
+   "id": "coupled-watershed",
    "metadata": {},
    "source": [
     "**REMARQUE** on a en fait trois façons d'implémenter un graphe\n",
@@ -102,8 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "homeless-apparel",
+   "execution_count": 13,
+   "id": "italic-state",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,8 +112,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "olympic-donor",
+   "execution_count": 14,
+   "id": "raising-capacity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,17 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "informative-phenomenon",
+   "execution_count": 15,
+   "id": "invalid-sunday",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Graphe_v1 at 0x7f84c0528bb0>"
+       "<__main__.Graphe_v1 at 0x7f84aae07ac0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,37 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "blond-wrestling",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "4\n",
-      "8\n",
-      "5\n",
-      "3\n",
-      "9\n",
-      "6\n",
-      "7\n",
-      "10\n",
-      "11\n"
-     ]
-    }
-   ],
-   "source": [
-    "for sommet in dfs(depart=1, graphe=v1):\n",
-    "    print(sommet)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "criminal-meditation",
+   "execution_count": 16,
+   "id": "rotary-webcam",
    "metadata": {},
    "outputs": [
     {
@@ -198,14 +169,43 @@
     }
    ],
    "source": [
+    "for sommet in dfs(depart=1, graphe=v1):\n",
+    "    print(sommet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "attended-peripheral",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "8\n",
+      "5\n",
+      "3\n",
+      "9\n",
+      "6\n",
+      "7\n",
+      "10\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
     "for sommet in bfs(depart=1, graphe=v1):\n",
     "    print(sommet)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "wanted-front",
+   "execution_count": 18,
+   "id": "latin-indonesia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,17 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "sublime-transparency",
+   "execution_count": 19,
+   "id": "spread-people",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Graphe_v2 at 0x7f84aa9bdb20>"
+       "<__main__.Graphe_v2 at 0x7f84aae07b80>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,37 +249,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "vocal-shareware",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "4\n",
-      "8\n",
-      "3\n",
-      "5\n",
-      "9\n",
-      "6\n",
-      "7\n",
-      "10\n",
-      "11\n"
-     ]
-    }
-   ],
-   "source": [
-    "for sommet in dfs(depart=1, graphe=v2):\n",
-    "    print(sommet)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "modular-wisconsin",
+   "execution_count": 20,
+   "id": "incorporate-baking",
    "metadata": {},
    "outputs": [
     {
@@ -301,35 +272,141 @@
     }
    ],
    "source": [
+    "for sommet in dfs(depart=1, graphe=v2):\n",
+    "    print(sommet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "stuck-inspiration",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "8\n",
+      "3\n",
+      "5\n",
+      "9\n",
+      "6\n",
+      "7\n",
+      "10\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
     "for sommet in bfs(depart=1, graphe=v2):\n",
     "    print(sommet)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ruled-japan",
+   "execution_count": 22,
+   "id": "million-marketing",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "v3 = Graphe_v3(\n",
+    "    adjacence=[\n",
+    "        [0 , 1 , 0 , 1 , 0 , 0 , 0 , 0 , 0 , 0 , 0],\n",
+    "        [1 , 0 , 0 , 0 , 0 , 0 , 0 , 1 , 0 , 0 , 0],\n",
+    "        [0 , 0 , 0 , 1 , 0 , 0 , 0 , 1 , 0 , 0 , 0],\n",
+    "        [1 , 0 , 1 , 0 , 1 , 0 , 0 , 0 , 0 , 0 , 0],\n",
+    "        [0 , 0 , 0 , 1 , 0 , 1 , 0 , 0 , 0 , 0 , 0],\n",
+    "        [0 , 0 , 0 , 0 , 1 , 0 , 1 , 0 , 0 , 0 , 1],\n",
+    "        [0 , 0 , 0 , 0 , 0 , 1 , 0 , 0 , 1 , 0 , 0],\n",
+    "        [0 , 1 , 1 , 0 , 0 , 0 , 0 , 0 , 1 , 0 , 0],\n",
+    "        [0 , 0 , 0 , 0 , 0 , 0 , 1 , 1 , 0 , 1 , 0],\n",
+    "        [0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 1 , 0 , 1],\n",
+    "        [0 , 0 , 0 , 0 , 0 , 1 , 0 , 0 , 0 , 1 , 0],\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "promising-french",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "11\n",
+      "10\n",
+      "9\n",
+      "8\n",
+      "3\n",
+      "2\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sommet in dfs(depart=1, graphe=v3):\n",
+    "    print(sommet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "fabulous-senior",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "8\n",
+      "3\n",
+      "5\n",
+      "9\n",
+      "6\n",
+      "7\n",
+      "10\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sommet in bfs(depart=1, graphe=v3):\n",
+    "    print(sommet)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "billion-market",
+   "id": "blessed-plate",
    "metadata": {},
    "source": [
-    "**REMARQUE** le parcours par `dfs` produit les sommets par ordre de distance au sommet de départ.\n",
+    "**REMARQUE** le parcours par `bfs` produit les sommets par ordre de distance au sommet de départ.\n",
     "\n",
     "**DEFINITION** la distance entre deux sommets est la longueur du plus court chemin qui les relie.\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "legislative-briefs",
+   "cell_type": "markdown",
+   "id": "antique-mouse",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Exercice\n",
+    "\n",
+    "- Coder des fonctions de conversion entre les 3 classes.\n",
+    "- Comment interpréter les coefficients des puissances de la matrice d'adjacence?"
+   ]
   }
  ],
  "metadata": {
