--- a/Seance07/seance.ipynb
+++ b/Seance07/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "white-laser",
+   "id": "scenic-contract",
    "metadata": {},
    "source": [
     "# Retour sur les graphes et les parcours"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "improving-carter",
+   "id": "mediterranean-alert",
    "metadata": {},
    "source": [
     "**REMARQUE** on a vu qu'on n'est pas obligé d'avoir le graphe entier en mémoire pour travailler dessus!"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incident-hampshire",
+   "id": "single-effect",
    "metadata": {},
    "source": [
     "<img src=\"./graphe_non_oriente.svg\"/>"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suspended-stability",
+   "id": "chinese-amazon",
    "metadata": {},
    "source": [
     "## Exercice\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "gentle-mobile",
+   "id": "careful-large",
    "metadata": {},
    "source": [
     "**REMARQUE** on constate que la seul fonctionnalité d'un graphe qu'on utilise pour `dfs` et `bfs` est la possibilité d'itérer sur les voisins d'un sommet."
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coupled-watershed",
+   "id": "frequent-nigeria",
    "metadata": {},
    "source": [
     "**REMARQUE** on a en fait trois façons d'implémenter un graphe\n",
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "italic-state",
+   "id": "exclusive-freeware",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "raising-capacity",
+   "id": "tired-chancellor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "invalid-sunday",
+   "id": "fancy-lincoln",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "rotary-webcam",
+   "id": "collective-relay",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "attended-peripheral",
+   "id": "sharp-charge",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "latin-indonesia",
+   "id": "curious-ranch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "spread-people",
+   "id": "after-gentleman",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "incorporate-baking",
+   "id": "center-honey",
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "stuck-inspiration",
+   "id": "fitted-beaver",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "million-marketing",
+   "id": "tough-fossil",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "promising-french",
+   "id": "opposite-ridge",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "fabulous-senior",
+   "id": "ranking-sauce",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blessed-plate",
+   "id": "hazardous-prefix",
    "metadata": {},
    "source": [
     "**REMARQUE** le parcours par `bfs` produit les sommets par ordre de distance au sommet de départ.\n",
@@ -399,14 +399,49 @@
   },
   {
    "cell_type": "markdown",
-   "id": "antique-mouse",
+   "id": "fifty-tolerance",
    "metadata": {},
    "source": [
     "## Exercice\n",
+    "10min -> 12h10\n",
     "\n",
-    "- Coder des fonctions de conversion entre les 3 classes.\n",
+    "- Coder des fonctions (ou méthodes) de conversion entre les 3 classes.\n",
     "- Comment interpréter les coefficients des puissances de la matrice d'adjacence?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "certain-british",
+   "metadata": {},
+   "source": [
+    "# Introduction problématique"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "numerical-mainstream",
+   "metadata": {},
+   "source": [
+    "La recherche de chemin par `bfs` produit celui qui a le moins d'arrête."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "convenient-change",
+   "metadata": {},
+   "source": [
+    "En fait on peut avoir une autre notion de distance dans les graphes et donc de chemin le plus court\n",
+    "\n",
+    "<img src=\"./France_temporel.svg\"/>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "respiratory-tenant",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
